# Swiss-Matchmaking-2023-

./: CMakeLists.txt  createPairings.h  editTourMain.h  edittourmain.cpp  main.cpp  newtourmain.h  outputs.cpp  outputs.h  person.cpp  person.h  viewmain.cpp  viewmain.h
